# Bifrost-TKCMPack

./: .gitignore  LICENSE  README.md
oss/eigen/: source.txt
oss/quickhull/: source.txt
oss/v-hacd/: source.txt
pack/: TKCM_config.json
pack/compounds/: edge_to_strands_.json  update_point_neighbors_plus.json
pack/compounds/ConstructFCurve/: ConstructFCurve.json  ConstructFCurve_nodedef.json
pack/compounds/ConvexHull/: ConvexHull_nodedef.json  VHACD.json  convex_hull.json
pack/compounds/DeleteUnusedMeshComponents/: DeleteUnusedMeshComponents_nodedef.json  delete_unused_mesh_components.json
pack/compounds/DetachMeshComponents/: DetachMeshComponents_nodedef.json  detach_mesh_components.json
pack/compounds/Dissolve/: Dissolve_nodedef.json  dissolve_face.json  dissolve_half_edge.json  dissolve_point.json
pack/compounds/InstantMeshes/: InstantMeshes.json  InstantMeshes_nodedef.json
pack/compounds/MergeMeshPoint/: MergeMeshPoint_nodedef.json  merge_mesh_point.json
pack/compounds/PolyEdgeExpand/: PolyEdgeExpand_nodedef.json  poly_edge_expand.json
pack/compounds/Quadrangulate/: Quadrangulate_nodedef.json  quadrangulate_mesh.json
pack/compounds/RBF/: RBF_nodedef.json  setup.json
pack/compounds/Snap/: Snap_nodedef.json  snap.json
pack/compounds/SplitEdge/: SplitEdge_nodedef.json  split_edge.json
pack/compounds/Tags/: Tags_nodedef.json  mesh_tag_promote.json  tag_mesh_border.json
pack/compounds/ToFCurve/: ToFCurve_nodedef.json
pack/graphs/ConstructFCurve_sample/: ConstructFCurve_sample.json
pack/graphs/ConvexHull_sample/: ConvexHull_sample.json
pack/graphs/DeleteUnusedMeshComponents_sample/: DeleteUnusedMeshComponents_sample.json
pack/graphs/DetachMeshComponents_sample/: DetachMeshComponents_sample.json
pack/graphs/DissolveFace_sample/: DissolveFace_sample.json
pack/graphs/DissolveHalfEdge_sample/: DissolveHalfEdge_sample.json
pack/graphs/DissolvePoint_sample/: DissolvePoint_sample.json
pack/graphs/InstantMeshes_sample/: InstantMeshes_sample.json
pack/graphs/MergeMeshPoint_sample/: merge_mesh_point_sample.json
pack/graphs/PolyEdgeExpand_sample/: PolyEdgeExpand_sample.json
pack/graphs/Quadrangulate_sample/: Quadrangulate_sample.json
pack/graphs/RBF_sample/: RBF_sample.json
pack/graphs/Snap_sample/snap_sample/: snap_sample.json
pack/graphs/SplitEdge_sample/: SplitEdge_sample.json
pack/graphs/Tags_sample/Tags/: Tags.json
pack/graphs/VHACD_sample/: VHACD_sample.json
src/ConstructFCurve/: CMakeLists.txt
src/ConstructFCurve/src/: CMakeLists.txt  ConstructFCurve_nodedef.cpp  ConstructFCurve_nodedef.h
src/ConvexHull/: CMakeLists.txt  CMakeSettings.json
src/ConvexHull/src/: CMakeLists.txt  ConvexHull_functions.h  ConvexHull_nodedef.cpp  ConvexHull_nodedef.h
src/DeleteUnusedMeshComponents/: CMakeLists.txt
src/DeleteUnusedMeshComponents/src/: CMakeLists.txt  DeleteUnusedMeshComponents_function.h  DeleteUnusedMeshComponents_nodedef.cpp  DeleteUnusedMeshComponents_nodedef.h
src/DetachMeshComponents/: CMakeLists.txt  CMakeSettings.json
src/DetachMeshComponents/src/: CMakeLists.txt  DetachMeshComponents_nodedef.cpp  DetachMeshComponents_nodedef.h
src/Dissolve/: CMakeLists.txt
src/Dissolve/src/: CMakeLists.txt  Dissolve_function.cpp  Dissolve_nodedef.cpp  Dissolve_nodedef.h  functions.cpp  functions.h
src/InstantMeshes/: CMakeLists.txt
src/InstantMeshes/src/: CMakeLists.txt  InstantMeshes_functions.cpp  InstantMeshes_functions.h  InstantMeshes_nodedef.cpp  InstantMeshes_nodedef.h
src/InstantMeshes/src/lib/: tbb.lib
src/InstantMeshes/src/nanogui/: opengl.h
src/InstantMeshes/src/nanovg/: nanovg.lib
src/InstantMeshes/src/pcg32/: pcg32-demo.lib
src/InstantMeshes/src/src/: aabb.h  common.h  field.cpp  field.h  main_dummy.h  meshstats.h
src/MergeMeshPoint/: CMakeLists.txt
src/MergeMeshPoint/src/: CMakeLists.txt  MergeMeshPoint_nodedef.cpp  MergeMeshPoint_nodedef.h
src/PolyEdgeExpand/: CMakeLists.txt
src/PolyEdgeExpand/src/: CMakeLists.txt  PolyEdgeExpand_nodedef.cpp  PolyEdgeExpand_nodedef.h
src/Quadrangulate/: CMakeLists.txt  CMakeSettings.json
src/Quadrangulate/src/: CMakeLists.txt  PackConfig.json.in  Quadrangulate_nodedef.cpp  Quadrangulate_nodedef.h
src/RBF/: CMakeLists.txt
src/RBF/src/: CMakeLists.txt  RBF_functions.cpp  RBF_nodedef.cpp  RBF_nodedef.h
src/Snap/: CMakeLists.txt
src/Snap/src/: CMakeLists.txt  Snap_nodedef.cpp  Snap_nodedef.h
src/SplitEdge/: CMakeLists.txt
src/SplitEdge/src/: CMakeLists.txt  SplitEdge_nodedef.cpp  SplitEdge_nodedef.h
src/SplitMeshComponents/: CMakeLists.txt
src/SplitMeshComponents/src/: CMakeLists.txt  SplitMeshComponents_nodedef.h  SplitMeshComponents_point_nodedef.cpp
src/Tags/: CMakeLists.txt
src/Tags/src/: CMakeLists.txt  Tags_nodedef.cpp  Tags_nodedef.h
src/array_test/: CMakeLists.txt
src/array_test/src/: CMakeLists.txt  array_test_nodedef.cpp  array_test_nodedef.h
src/core/: PackConfig.json.in  TKCM_core.h  TKCM_export.h  TKCM_fn.h  TKCM_geometry.cpp  TKCM_geometry.h  TKCM_math.h  eigen_convert.cpp  eigen_convert.h
src/toFCurve/: CMakeLists.txt
src/toFCurve/src/: CMakeLists.txt  toFCurve_nodedef.cpp  toFCurve_nodedef.h
